corpus/commands.txt
===
Normal cmdlet
===

Write-Host "CERT"

---

(program
  (pipeline
    (command
      (command_name)
      (string_literal
        (expandable_string_literal)))))

===
Cmdlet that start with a number
===

555Write-Host 4+7+8

---

(program
  (pipeline
    (command
      (command_name)
      (generic_token))))

===
Cmdlet with mixed string
===

555Write-"${message}" 4+7+8

---

(program
  (pipeline
    (command
      (command_name
        (variable
          (braced_variable)))
      (generic_token))))

===
Plain cmdlet
===

New-DynamicParam -Name Plugins -type string[] -ValidateSet $(((gci .\plugins\*.pl).name) -replace "\.pl","") -DPDictionary $Dictionary

---

(program
  (pipeline
    (command
      (command_name)
      (command_parameter)
      (generic_token)
      (command_parameter)
      (generic_token)
      (command_parameter)
      (sub_expression
        (pipeline
          (logical_expression
            (bitwise_expression
              (comparison_expression
                (additive_expression
                  (multiplicative_expression
                    (format_expression
                      (range_expression
                        (array_literal_expression
                          (unary_expression
                            (parenthesized_expression
                              (pipeline
                                (logical_expression
                                  (bitwise_expression
                                    (comparison_expression
                                      (additive_expression
                                        (multiplicative_expression
                                          (format_expression
                                            (range_expression
                                              (array_literal_expression
                                                (unary_expression
                                                  (member_access
                                                    (parenthesized_expression
                                                      (pipeline
                                                        (command
                                                          (command_name)
                                                          (generic_token))))
                                                    (member_name
                                                      (simple_name))))))))))))))))))))
                (comparison_operator)
                (additive_expression
                  (multiplicative_expression
                    (format_expression
                      (range_expression
                        (array_literal_expression
                          (unary_expression
                            (string_literal
                              (expandable_string_literal)))
                          (unary_expression
                            (string_literal
                              (expandable_string_literal)))))))))))))
      (command_parameter)
      (variable))))


===
Quoted CmdLet
===

i''ex "pwd"

---

(program
  (pipeline
    (command
      (command_name)
      (string_literal
        (expandable_string_literal)))))

===
Double Quoted CmdLet
===

i""ex "pwd"

---

(program
  (pipeline
    (command
      (command_name)
      (string_literal
        (expandable_string_literal)))))

===
Obfuscated cmdlet and string
===

ie""x'' "p`"`"w''d`"`""

---

(program
  (pipeline
    (command
      (command_name)
      (string_literal
        (expandable_string_literal)))))

===
Native command
===

net.exe

---

(program
  (pipeline
    (command
      (command_name))))


===
Unix-like native command
===

git clone -b this_branch --single-branch https://github.com/PowerShell/PowerShell

---

(program
  (pipeline
    (command
      (command_name)
      (generic_token)
      (command_parameter)
      (generic_token)
      (command_parameter)
      (generic_token))))

===
Windows-style native command
===

net use e: \\usrsvr002\smithmark Ue345Ii /user:pdc01\msmith2 /savecred /p:yes

---

(program
  (pipeline
    (command
      (command_name)
      (generic_token)
      (generic_token)
      (generic_token)
      (generic_token)
      (generic_token)
      (generic_token)
      (generic_token))))


===
Foreach statement without token separator
===

%{ ( [char][int] $_)}

---

(program
  (pipeline
    (command
      (command_name)
      (script_block_expression
        (script_block
          (script_block_body
            (pipeline
              (logical_expression
                (bitwise_expression
                  (comparison_expression
                    (additive_expression
                      (multiplicative_expression
                        (format_expression
                          (range_expression
                            (array_literal_expression
                              (unary_expression
                                (parenthesized_expression
                                  (pipeline
                                    (logical_expression
                                      (bitwise_expression
                                        (comparison_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (format_expression
                                                (range_expression
                                                  (array_literal_expression
                                                    (unary_expression
                                                      (expression_with_unary_operator
                                                        (cast_expression
                                                          (type_literal
                                                            (type_spec
                                                              (type_name
                                                                (type_identifier))))
                                                          (unary_expression
                                                            (expression_with_unary_operator
                                                              (cast_expression
                                                                (type_literal
                                                                  (type_spec
                                                                    (type_name
                                                                      (type_identifier))))
                                                                (unary_expression
                                                                  (variable))))))))))))))))))))))))))))))))))
