corpus/number.txt
===
Integer
===

239

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (integer_literal
                        (decimal_integer_literal)))))))))))))

===
Float
===

12.9191008

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (real_literal))))))))))))

===
Scientific notation
===

6.022e23

.12e4

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (real_literal)))))))))))
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (real_literal))))))))))))

===
Byte size suffix
===

12mb

12gb

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (integer_literal
                        (decimal_integer_literal))))))))))))
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (integer_literal
                        (decimal_integer_literal)))))))))))))

===
Integer operation
===

4 + 4 - 8

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (additive_expression
              (additive_expression
                (multiplicative_expression
                  (format_expression
                    (range_expression
                      (array_literal_expression
                        (unary_expression
                          (integer_literal
                            (decimal_integer_literal))))))))
              (multiplicative_expression
                (format_expression
                  (range_expression
                    (array_literal_expression
                      (unary_expression
                        (integer_literal
                          (decimal_integer_literal))))))))
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (integer_literal
                        (decimal_integer_literal)))))))))))))

===
Integer operation with negative
===

4 + 4 - -8

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (additive_expression
              (additive_expression
                (multiplicative_expression
                  (format_expression
                    (range_expression
                      (array_literal_expression
                        (unary_expression
                          (integer_literal
                            (decimal_integer_literal))))))))
              (multiplicative_expression
                (format_expression
                  (range_expression
                    (array_literal_expression
                      (unary_expression
                        (integer_literal
                          (decimal_integer_literal))))))))
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (expression_with_unary_operator
                        (unary_expression
                          (integer_literal
                            (decimal_integer_literal)))))))))))))))

===
Cast with composed expression
===

[char]84 + [char]8

---

(program
  (pipeline
    (logical_expression
      (bitwise_expression
        (comparison_expression
          (additive_expression
            (additive_expression
              (multiplicative_expression
                (format_expression
                  (range_expression
                    (array_literal_expression
                      (unary_expression
                        (expression_with_unary_operator
                          (cast_expression
                            (type_literal
                              (type_spec
                                (type_name
                                  (type_identifier))))
                            (unary_expression
                              (integer_literal
                                (decimal_integer_literal)))))))))))
            (multiplicative_expression
              (format_expression
                (range_expression
                  (array_literal_expression
                    (unary_expression
                      (expression_with_unary_operator
                        (cast_expression
                          (type_literal
                            (type_spec
                              (type_name
                                (type_identifier))))
                          (unary_expression 
                            (integer_literal
                              (decimal_integer_literal))))))))))))))))
